<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.plovdev</groupId>
    <artifactId>PornViewer</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>20.0.2</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>
        <!-- Декодер WebP -->
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-webp</artifactId>
            <version>3.10.1</version>
        </dependency>


        <!-- Модуль для связи Swing и JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version> <!-- версия твоей JavaFX -->
        </dependency>

        <dependency>
            <groupId>io.github.willena</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.51.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.2</version>
        </dependency>



        <dependency>
            <groupId>com.github.javakeyring</groupId>
            <artifactId>java-keyring</artifactId>
            <version>1.0.4</version>
        </dependency>


        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.11.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
        </dependency>
        <!-- JavaFx !-->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>17.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.plovdev.pornviewer.Launcher</mainClass>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>

                            <!-- Исключаем ненужные библиотеки из финального JAR -->
                            <artifactSet>
                                <excludes>
                                    <!-- Аннотации для статического анализа (не нужны в рантайме) -->
                                    <exclude>com.google.errorprone:error_prone_annotations</exclude>
                                    <exclude>org.checkerframework:checker-qual</exclude>
                                    <exclude>com.google.code.findbugs:jsr305</exclude>
                                    <!-- Kotlin common модули (если не используете Kotlin напрямую) -->
                                    <exclude>org.jetbrains.kotlin:kotlin-stdlib-common</exclude>
                                    <!-- Дополнительные исключения -->
                                    <exclude>org.intellij.lang.annotations:annotations</exclude>
                                </excludes>
                            </artifactSet>

                            <!-- Исключаем конфликтующие и ненужные файлы -->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/versions/9/module-info.class</exclude>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <!-- Исключаем GraalVM метаданные из всех JAR -->
                                        <exclude>META-INF/native-image/**</exclude>
                                        <exclude>META-INF/substrate/**</exclude>
                                    </excludes>
                                </filter>

                                <filter>
                                    <artifact>io.github.willena:sqlite-jdbc</artifact>
                                    <excludes>
                                        <exclude>org/sqlite/native/Windows/**</exclude>
                                        <exclude>org/sqlite/native/Linux/**</exclude>
                                        <exclude>org/sqlite/native/linux/**</exclude>
                                        <exclude>org/sqlite/native/FreeBSD/**</exclude>
                                        <exclude>org/sqlite/native/Android/**</exclude>
                                        <exclude>org/sqlite/native/Linux-Android/**</exclude>
                                        <exclude>org/sqlite/native/Linux-Musl/**</exclude>
                                        <exclude>org/sqlite/native/readme.txt</exclude>
                                        <exclude>META-INF/native-image/**</exclude>
                                        <exclude>META-INF/substrate/**</exclude>
                                    </excludes>
                                </filter>

                                <!-- Для JavaFX исключаем substrate конфиги -->
                                <filter>
                                    <artifact>org.openjfx:javafx-base</artifact>
                                    <excludes>
                                        <exclude>META-INF/substrate/**</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>org.openjfx:javafx-controls</artifact>
                                    <excludes>
                                        <exclude>META-INF/substrate/**</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>org.openjfx:javafx-graphics</artifact>
                                    <excludes>
                                        <exclude>META-INF/substrate/**</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>org.openjfx:javafx-media</artifact>
                                    <excludes>
                                        <exclude>META-INF/substrate/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>

                            <createSourcesJar>false</createSourcesJar>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <minimizeJar>false</minimizeJar>
                            <outputDirectory>./input-pv</outputDirectory>
                            <finalName>PornViewer</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>